src/test/ui/issues/issue-20692.stderr
error[E0038]: the trait `Array` cannot be made into an object
  --> $DIR/issue-20692.rs:7:5
   |
LL |     &dyn Array;
   |     ^^^^^^^^^^ the trait `Array` cannot be made into an object
   |
   = note: the trait cannot require that `Self : Sized`

error[E0038]: the trait `Array` cannot be made into an object
  --> $DIR/issue-20692.rs:4:13
   |
LL |     let _ = x
   |             ^ the trait `Array` cannot be made into an object
   |
   = note: the trait cannot require that `Self : Sized`
   = note: required because of the requirements on the impl of `std::ops::CoerceUnsized<&dyn Array>` for `&T`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0038`.
